Fixed spacing between buttons in mobile Close #10
Dotted line is hidden, extra margin-top on blue button deleted

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -120,13 +120,8 @@ p:last-of-type {
     padding-top: 1em;
   }
 
-  p:nth-of-type(3) {
-    border-bottom: none;
-    padding-bottom: 0;
-  }
-
-  .section__col__button_buy_this {
-    margin-top: .5em;
+  hr {
+    display: none;
   }
 
 }
